[package]

name = "getopts"
version = "0.2.19" # don't forget to update html_root_url
authors = ["The Rust Project Developers"]
license = "MIT/Apache-2.0"
readme = "README.md"
repository = "https://github.com/rust-lang/getopts"
documentation = "https://doc.rust-lang.org/getopts"
homepage = "https://github.com/rust-lang/getopts"
description = """
getopts-like option parsing.
"""
categories = ["command-line-interface"]

[dependencies]
unicode-width = {version = "0.1.5", git = "https://github.com/crlf0710/unicode-width"}
std = { version = "1.0.0", optional = true, package = 'rustc-test-workspace-std' }

[dev-dependencies]
log = "0.4"

[features]
rustc-dep-of-test = ['std', 'unicode-width/rustc-dep-of-test']
